--- a/index.html
+++ b/index.html
@@ -1,87 +1,153 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="pages/index.css">
-  <title>Mesto</title>
-</head>
-<body class="page">
-  <header class="header">
-    <img src="images/logo.svg" alt="логотип Mesto" class="header__logo">
-  </header>
-  <main class="content">
-    <section class="profile">
-      <div class="profile__avatar"></div>
-      <div class="profile__info">
-        <h1 class="profile__title">Жак-Ив Кусто</h1>
-        <p class="profile__subtitle">Исследователь океана</p>
-        <button class="profile__edit-button" type="button"></button>
-      </div>
-      <button class="profile__add-button" type="button"></button>
-    </section>
-    <section class="elements">
-    </section>
-  </main>
-  <footer class="footer">
-    <p class="footer__footnote">&copy; 2022 Mesto Russia</p>
-  </footer>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="pages/index.css" />
+    <title>Mesto</title>
+  </head>
+  <body class="page">
+    <header class="header">
+      <img src="images/logo.svg" alt="логотип Mesto" class="header__logo" />
+    </header>
+    <main class="content">
+      <section class="profile">
+        <div class="profile__avatar"></div>
+        <div class="profile__info">
+          <h1 class="profile__title">Жак-Ив Кусто</h1>
+          <p class="profile__subtitle">Исследователь океана</p>
+          <button class="profile__edit-button" type="button"></button>
+        </div>
+        <button class="profile__add-button" type="button"></button>
+      </section>
+      <section class="cards"></section>
+    </main>
+    <footer class="footer">
+      <p class="footer__footnote">&copy; 2026 Mesto Russia</p>
+    </footer>
+<!-- поубирать лишнией айдишники с попапов -->
     <div class="popup" id="popup_edit">
       <div class="popup__container">
-        <button class="popup__close-button" id="popup__close-button_edit"></button>
-        <form novalidate name="formEdit" class="popup__form" id="popup__form_edit">
+        <button
+          class="popup__close-button"
+          id="popup__close-button_edit"
+        ></button>
+        <form
+          novalidate
+          name="formEdit"
+          class="popup__form"
+          id="popup__form_edit"
+        >
           <h2 class="popup__title">Редактировать профиль</h2>
           <div class="popup__input-container">
-            <input name="name" id="name" type="text" class="popup__input popup__input_type_name" size="358" required
-              minlength="2" maxlength="40">
+            <input
+              name="name"
+              id="name"
+              type="text"
+              class="popup__input popup__input_type_name"
+              size="358"
+              required
+              minlength="2"
+              maxlength="40"
+            />
             <span name="errorName" id="name-error" class="popup__span"></span>
           </div>
           <div class="popup__input-container">
-            <input name="job" id="job" type="text" class="popup__input popup__input_type_job" size="358" required
-              minlength="2" maxlength="200">
+            <input
+              name="job"
+              id="job"
+              type="text"
+              class="popup__input popup__input_type_job"
+              size="358"
+              required
+              minlength="2"
+              maxlength="200"
+            />
             <span id="job-error" class="popup__span"></span>
           </div>
-          <button class="popup__form-button" id="popup__form-button_edit" type="submit">Сохранить</button>
+          <button
+            class="popup__form-button"
+            id="popup__form-button_edit"
+            type="submit"
+          >
+            Сохранить
+          </button>
         </form>
       </div>
     </div>
     <div class="popup" id="popup_add">
       <div class="popup__container">
-        <button class="popup__close-button" id="popup__close-button_add"></button>
+        <button
+          class="popup__close-button"
+          id="popup__close-button_add"
+        ></button>
         <form novalidate class="popup__form" id="popup__form_add">
           <h2 class="popup__title">Новое место</h2>
           <div class="popup__input-container">
-            <input id="place" type="text" class="popup__input popup__input_type_place" size="358" name="place"
-              placeholder="Название" required minlength="2" maxlength="30">
+            <input
+              id="place"
+              type="text"
+              class="popup__input popup__input_type_place"
+              size="358"
+              name="place"
+              placeholder="Название"
+              required
+              minlength="2"
+              maxlength="30"
+            />
             <span id="place-error" class="popup__span"></span>
           </div>
           <div class="popup__input-container">
-            <input id="link" type="url" class="popup__input popup__input_type_link" size="358" name="link"
-              placeholder="Ссылка на картинку" required>
+            <input
+              id="link"
+              type="url"
+              class="popup__input popup__input_type_link"
+              size="358"
+              name="link"
+              placeholder="Ссылка на картинку"
+              required
+            />
             <span id="link-error" class="popup__span"></span>
           </div>
-          <button class="popup__form-button" id="popup__form-button_add" type="submit">Сохранить</button>
+          <button
+            class="popup__form-button"
+            id="popup__form-button_add"
+            type="submit"
+          >
+            Сохранить
+          </button>
         </form>
       </div>
     </div>
-  <div class="popup popup_opacity" id="popup_image">
-    <div class="popup__image-container">
-      <img src="#" class="popup__image" alt="картинка" id="popup__image-open">
-      <h2 class="popup__image-title"></h2>
-      <button class="popup__close-button" id="popup__close-button_image"></button>
-    </div>
-  </div>
-  <template id="element-template">
-    <div class="element">
-      <img src="#" alt="картинка" class="element__image">
-      <button class="element__delete-button" type="button"></button>
-      <div class="element__info">
-        <h2 class="element__title"></h2>
-        <button class="element__like-button" type="button"></button>
+    <div class="popup popup_opacity" id="popup_image">
+      <div class="popup__image-container">
+        <img
+          src="#"
+          class="popup__image"
+          alt="картинка"
+          id="popup__image-open"
+        />
+        <h2 class="popup__image-title"></h2>
+        <button
+          class="popup__close-button"
+          id="popup__close-button_image"
+        ></button>
       </div>
     </div>
-  </template>
-  <script src="./scripts/script.js"></script>
-  <script src="./scripts/validate.js"></script>
+
+    <template id="card-template">
+      <div class="card">
+        <img class="card__image" alt="картинка" src="#" />
+        <button class="card__delete-button" type="button"></button>
+        <div class="card__info">
+          <h2 class="card__title"></h2>
+          <button class="card__like-button" type="button"></button>
+        </div>
+      </div>
+    </template>
+
+    <script type="module" src="./scripts/script.js"></script>
+    <script type="module" src="./scripts/Card.js"></script>
+    <script type="module" src="./scripts/FormValidator.js"></script>
   </body>
 </html>
